2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Daily_CheckList__c/Warehouse_Daily_CheckList__c.object-meta.xml
<CustomObject>
    <label>Warehouse Daily CheckList</label>
    <nameField>
        <displayFormat>WDC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warehouse Daily CheckLists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>