2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Daily_CheckList__c/fields/Inspected_By__c.field-meta.xml
<CustomField>
    <fullName>Inspected_By__c</fullName>
    <label>Inspected By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>