2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Daily_CheckList__c/fields/Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Date__c</fullName>
    <label>Inspection Date</label>
    <type>DateTime</type>
</CustomField>