2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Daily_CheckList__c/fields/Warehouse_Detail__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Detail__c</fullName>
    <label>Warehouse Detail</label>
    <referenceTo>Warehouse_Detail__c</referenceTo>
    <relationshipLabel>Warehouse Daily CheckLists</relationshipLabel>
    <relationshipName>Warehouse_Daily_CheckLists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>